--- a/package.json
+++ b/package.json
@@ -1,60 +1,67 @@
 {
-    "name": "koa-mongo-router",
-    "version": "0.0.1",
-    "description": "KOA REST API Router for MongoDB",
-    "author": "James Talton",
-    "license": "ISC",
-    "keywords": [
-        "KOA",
-        "REST",
-        "MongoDB",
-        "Mongo"
-    ],
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "scripts": {
-        "build": "rm -rf lib dist && tsc && webpack",
-        "test": "rm -rf coverage && jest",
-        "lint": "tslint -p . && tslint -p test -c test/tslint.json",
-        "lint-fix": "tslint -p . --fix && tslint -p test -c test/tslint.json --fix",
-        "check-format": "prettier --list-different **/*.ts **/*.json **/*.md !coverage/** !lib/** !dist/** !**/package-lock.json",
-        "format": "prettier --write **/*.ts **/*.json **/*.md !coverage/** !lib/** !dist/** !**/package-lock.json",
-        "start": "NODE_ENV=development LOG_LEVEL=silly PORT=3000 MAX_WORKERS=8 ts-node-dev --no-notify --respawn --transpileOnly src/main.ts",
-        "clean": "rm -rf package-lock.json node_modules lib dist coverage",
-        "update": "npm run clean && ncu -a && npm install && npm test",
-        "docker:build": "npm test && docker build --pull -t app .",
-        "docker:run": "npm run docker:build && docker run --name app -p 3000:3000 -e PORT=3000 --rm app"
-    },
-    "dependencies": {
-        "@koa/cors": "^2.2.3",
-        "@types/koa": "^2.0.48",
-        "@types/koa-bodyparser": "^4.2.1",
-        "@types/koa-compress": "^2.0.8",
-        "@types/koa-helmet": "^3.1.2",
-        "@types/koa-router": "^7.0.39",
-        "@types/koa__cors": "^2.2.3",
-        "@types/mongodb": "^3.1.19",
-        "@types/node": "^10.12.23",
-        "JSONStream": "^1.3.5",
-        "koa": "^2.7.0",
-        "koa-bodyparser": "^4.2.1",
-        "koa-compress": "^3.0.0",
-        "koa-helmet": "^4.0.0",
-        "koa-router": "^7.4.0",
-        "mongodb": "^3.1.13",
-        "typescript": "^3.3.3"
-    },
-    "devDependencies": {
-        "@types/jest": "^23.3.14",
-        "axios": "^0.18.0",
-        "jest": "^23.6.0",
-        "prettier": "^1.16.4",
-        "ts-jest": "^23.10.5",
-        "ts-node": "^8.0.2",
-        "ts-node-dev": "^1.0.0-pre.32",
-        "tslint": "^5.12.1",
-        "tslint-config-prettier": "^1.18.0",
-        "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3"
-    }
+  "name": "koa-mongo-router",
+  "version": "0.0.0-development",
+  "description": "KOA REST API Router for MongoDB",
+  "author": "James Talton",
+  "license": "ISC",
+  "keywords": [
+    "KOA",
+    "REST",
+    "MongoDB",
+    "Mongo"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jamestalton/koa-mongo-router.git"
+  },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "rm -rf lib dist && tsc && webpack",
+    "test": "rm -rf coverage && jest",
+    "lint": "tslint -p . && tslint -p test -c test/tslint.json",
+    "lint-fix": "tslint -p . --fix && tslint -p test -c test/tslint.json --fix",
+    "check-format": "prettier --list-different **/*.ts **/*.json **/*.md !coverage/** !lib/** !dist/** !**/package-lock.json",
+    "format": "prettier --write **/*.ts **/*.json **/*.md !coverage/** !lib/** !dist/** !**/package-lock.json",
+    "start": "NODE_ENV=development LOG_LEVEL=silly PORT=3000 MAX_WORKERS=8 ts-node-dev --no-notify --respawn --transpileOnly src/main.ts",
+    "clean": "rm -rf package-lock.json node_modules lib dist coverage",
+    "update": "npm run clean && ncu -a && npm install && npm test",
+    "docker:build": "npm test && docker build --pull -t app .",
+    "docker:run": "npm run docker:build && docker run --name app -p 3000:3000 -e PORT=3000 --rm app",
+    "semantic-release": "semantic-release"
+  },
+  "dependencies": {
+    "@koa/cors": "^2.2.3",
+    "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.2.1",
+    "@types/koa-compress": "^2.0.8",
+    "@types/koa-helmet": "^3.1.2",
+    "@types/koa-router": "^7.0.39",
+    "@types/koa__cors": "^2.2.3",
+    "@types/mongodb": "^3.1.19",
+    "@types/node": "^10.12.23",
+    "JSONStream": "^1.3.5",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
+    "koa-helmet": "^4.0.0",
+    "koa-router": "^7.4.0",
+    "mongodb": "^3.1.13",
+    "typescript": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.14",
+    "axios": "^0.18.0",
+    "jest": "^23.6.0",
+    "prettier": "^1.16.4",
+    "semantic-release-cli": "^4.1.0",
+    "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "semantic-release": "^15.13.3"
+  }
 }
