--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "devDependencies": {
         "@types/jest": "^23.3.14",
         "axios": "^0.18.0",
+        "coveralls": "^3.0.2",
         "jest": "^23.6.0",
         "prettier": "^1.16.4",
+        "semantic-release": "^15.13.3",
         "semantic-release-cli": "^4.1.0",
         "ts-jest": "^23.10.5",
         "ts-node": "^8.0.2",
@@ -61,7 +63,6 @@
         "tslint": "^5.12.1",
         "tslint-config-prettier": "^1.18.0",
         "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3",
-        "semantic-release": "^15.13.3"
+        "webpack-cli": "^3.2.3"
     }
 }
