--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "JSONStream": "^1.3.5",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
-        "koa-router": "^7.4.0"
+        "koa-router": "^7.4.0",
+        "mongodb": "^3.1.13"
     },
     "devDependencies": {
         "@types/koa": "^2.0.48",
@@ -42,7 +43,6 @@
         "axios": "^0.18.0",
         "coveralls": "^3.0.2",
         "jest": "^23.6.0",
-        "mongodb": "^3.1.13",
         "prettier": "^1.16.4",
         "semantic-release": "^15.13.3",
         "semantic-release-cli": "^4.1.0",
