--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "devDependencies": {
         "@types/koa": "^2.0.48",
-        "@types/koa-bodyparser": "^4.2.1",
+        "@types/koa-bodyparser": "^4.2.2",
         "@types/koa-router": "^7.0.39",
         "@types/mongodb": "^3.1.19",
         "@types/node": "^10.12.23",
@@ -49,8 +49,6 @@
         "ts-jest": "^23.10.5",
         "tslint": "^5.12.1",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.3.3",
-        "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3"
+        "typescript": "^3.3.3"
     }
 }
