--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "scripts": {
         "build": "rm -rf lib && tsc",
         "test": "rm -rf coverage && jest",
-        "start": "ts-node example/example.ts",
+        "start": "PORT=3000 MAX_WORKERS=2 LOG_LEVEL=debug ts-node-dev --no-notify --respawn example/example.ts",
         "lint": "tslint -p . && tslint -p test -c test/tslint.json",
         "lint-fix": "tslint -p . --fix && tslint -p test -c test/tslint.json --fix",
         "check-format": "prettier --list-different **/*.ts **/*.json **/*.md !coverage/** !lib/** !**/package-lock.json",
@@ -32,15 +32,16 @@
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
-        "mongodb": "^3.1.13"
+        "mongodb": "^3.1.13",
+        "node-server-utils": "0.0.12"
     },
     "devDependencies": {
+        "@types/jest": "^23.3.14",
         "@types/koa": "^2.0.48",
         "@types/koa-bodyparser": "^4.2.2",
         "@types/koa-router": "^7.0.39",
         "@types/mongodb": "^3.1.19",
         "@types/node": "^10.12.23",
-        "@types/jest": "^23.3.14",
         "axios": "^0.18.0",
         "coveralls": "^3.0.2",
         "jest": "^23.6.0",
@@ -49,6 +50,7 @@
         "semantic-release-cli": "^4.1.0",
         "ts-jest": "^23.10.5",
         "ts-node": "^8.0.2",
+        "ts-node-dev": "^1.0.0-pre.32",
         "tslint": "^5.12.1",
         "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.3.3"
