test update mongo in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: node_js
 node_js: 10
-env: MONGODB_VERSION=3.6.x
 
 git:
     depth: false
     quiet: true
     submodules: false
 
-services:
-    - mongodb
-
 if: tag IS blank
+
+env:
+    global:
+        - MONGODB=4.0.1
+
+before_script:
+    - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-${MONGODB}.tgz -O /tmp/mongodb.tgz
+    - tar -xvf /tmp/mongodb.tgz
+    - mkdir /tmp/data
+    - ${PWD}/mongodb-linux-x86_64-${MONGODB}/bin/mongod --dbpath /tmp/data --bind_ip 127.0.0.1 --auth &> /dev/null &
 
 install: npm ci
 
