--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,6 @@ git:
 
 if: tag IS blank
 
-env:
-    global:
-        - MONGODB=4.0.1
-
 install: npm ci
 
 before_script:
@@ -19,9 +15,11 @@ before_script:
     - tar -zxvf mongodb-linux-x86_64-3.6.6.tgz
     - mkdir -p ./data/db/27017
     - ./mongodb-linux-x86_64-3.6.6/bin/mongod --fork --dbpath ./data/db/27017 --syslog --port 27017
-    - sleep 15
+    - sleep 2
 
-script: npm run test && npm run lint && npm run check-format && npm run build && cat coverage/lcov.info | coveralls
+script: npm run test && npm run lint && npm run check-format && npm run build
+
+after_success: cat coverage/lcov.info | coveralls
 
 jobs:
     include:
