--- a/package.json
+++ b/package.json
@@ -28,31 +28,32 @@
         "update": "npm run clean && ncu -a && npm install && npm test"
     },
     "dependencies": {
+        "@types/koa": "^2.0.48",
+        "@types/koa-bodyparser": "^4.2.2",
+        "@types/koa-router": "^7.0.40",
+        "@types/mongodb": "^3.1.22",
+        "@types/node": "^11.11.3",
         "JSONStream": "^1.3.5",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
+        "le_node": "^1.8.0",
         "mongodb": "^3.1.13",
-        "node-server-utils": "0.0.12"
+        "node-server-utils": "0.0.13"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.6",
-        "@types/koa": "^2.0.48",
-        "@types/koa-bodyparser": "^4.2.2",
-        "@types/koa-router": "^7.0.39",
-        "@types/mongodb": "^3.1.19",
-        "@types/node": "^11.9.4",
+        "@types/jest": "^24.0.11",
         "axios": "^0.18.0",
-        "coveralls": "^3.0.2",
-        "jest": "^24.1.0",
+        "coveralls": "^3.0.3",
+        "jest": "^24.5.0",
         "prettier": "^1.16.4",
         "semantic-release": "^15.13.3",
-        "semantic-release-cli": "^4.1.0",
+        "semantic-release-cli": "^4.1.1",
         "ts-jest": "^24.0.0",
-        "ts-node": "^8.0.2",
+        "ts-node": "^8.0.3",
         "ts-node-dev": "^1.0.0-pre.32",
-        "tslint": "^5.12.1",
+        "tslint": "^5.14.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.3.3"
+        "typescript": "^3.3.3333"
     }
 }
