--- a/package.json
+++ b/package.json
@@ -31,29 +31,29 @@
         "@types/koa": "^2.0.48",
         "@types/koa-bodyparser": "^4.2.2",
         "@types/koa-router": "^7.0.40",
-        "@types/mongodb": "^3.1.22",
-        "@types/node": "^11.11.3",
+        "@types/mongodb": "^3.1.27",
+        "@types/node": "^10.x.x",
         "JSONStream": "^1.3.5",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
         "le_node": "^1.8.0",
-        "mongodb": "^3.1.13",
+        "mongodb": "^3.2.5",
         "node-server-utils": "0.0.13"
     },
     "devDependencies": {
-        "@types/jest": "^23.x.x",
+        "@types/jest": "^24.x.x",
         "axios": "^0.18.0",
         "coveralls": "^3.0.3",
-        "jest": "^23.x.x",
-        "prettier": "^1.16.4",
-        "semantic-release": "^15.13.3",
-        "semantic-release-cli": "^4.1.1",
-        "ts-jest": "^23.x.x",
-        "ts-node": "^8.0.3",
+        "jest": "^24.x.x",
+        "prettier": "^1.17.1",
+        "semantic-release": "^15.13.12",
+        "semantic-release-cli": "^5.1.0",
+        "ts-jest": "^24.x.x",
+        "ts-node": "^8.1.0",
         "ts-node-dev": "^1.0.0-pre.32",
-        "tslint": "^5.14.0",
+        "tslint": "^5.16.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.3.3333"
+        "typescript": "^3.4.5"
     }
 }
