--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "koa-mongo-router",
-    "version": "0.0.9",
+    "version": "0.0.0-development",
     "description": "KOA REST API Router for MongoDB",
     "author": "James Talton",
     "license": "ISC",
