--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
         "check": "prettier --list-different **/*.ts **/*.json **/*.md !coverage/** !lib/** !**/package-lock.json",
         "format": "prettier --write **/*.ts **/*.json **/*.md !coverage/** !lib/** !**/package-lock.json",
         "clean": "rm -rf package-lock.json node_modules lib coverage",
-        "update": "npm run clean && ncu -a && npm install && npm test"
+        "update": "npm run clean && ncu -u && npm install && npm test"
     },
     "dependencies": {
-        "@types/koa": "^2.0.49",
+        "@types/koa": "^2.0.50",
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-router": "^7.0.42",
-        "@types/mongodb": "^3.3.3",
+        "@types/mongodb": "^3.3.6",
         "@types/node": "^12.x.x",
         "JSONStream": "^1.3.5",
-        "koa": "^2.8.1",
+        "koa": "^2.10.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
         "mongodb": "^3.3.2",
-        "node-server-utils": "0.0.42",
+        "node-server-utils": "0.0.47",
         "r7insight_node": "^1.8.3"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.18",
+        "@types/jest": "^24.0.19",
         "axios": "^0.19.0",
         "jest": "^24.x.x",
         "prettier": "^1.18.2",
@@ -52,6 +52,6 @@
         "ts-node-dev": "^1.0.0-pre.40",
         "tslint": "^5.20.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.6.3"
+        "typescript": "^3.6.4"
     }
 }
