--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-router": "^7.4.0",
         "@types/mongodb": "^3.5.14",
-        "@types/node": "^13.x.x",
+        "@types/node": "^13.13.4",
         "JSONStream": "^1.3.5",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.3.0",
         "koa-router": "^8.0.8",
-        "mongodb": "^3.5.6",
+        "mongodb": "^3.5.7",
         "node-server-utils": "0.0.93",
         "r7insight_node": "^2.0.1"
     },
     "devDependencies": {
         "@types/jest": "^25.2.1",
         "axios": "^0.19.2",
-        "jest": "^25.x.x",
+        "jest": "^25.5.1",
         "prettier": "^2.0.5",
         "ts-jest": "^25.x.x",
         "ts-node": "^8.9.1",
